# voxterm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  BACKLOG.md  CHANGELOG.md  MASTER_DOC.md  Makefile  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  agents.md  codex_voice.py  install.sh  master_index.md  start.bat  start.sh  test  voice
.github/: CONTRIBUTING.md
.github/scripts/: verify_perf_metrics.py
.github/workflows/: memory_guard.yml  mutation-testing.yml  perf_smoke.yml  rust_ci.yml  rust_tui.yml  voice_mode_guard.yml
Codex Voice.app/Contents/: Info.plist
VoxTerm.app/Contents/: Info.plist
app/: README.md
dev/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md
dev/active/: BACKLOG.md  MASTER_PLAN.md  MODULARIZATION_PLAN.md  UI_ENHANCEMENT_PLAN.md  overlay.md  release_audit_Feb2nd.md
dev/adr/: 0000-template.md  0001-sensitivity-hotkeys.md  0002-pty-passthrough-architecture.md  0003-non-streaming-stt.md  0004-python-fallback-chain.md  0005-logging-opt-in.md  0006-auto-learn-prompt-detection.md  0007-mono-audio-downmixing.md  0008-transcript-queue-overflow.md  0009-serialized-output-writer.md  0010-sigwinch-atomic-flag.md  0011-voice-send-modes.md  0012-bounded-audio-channels.md  0013-security-hard-limits.md  0014-json-ipc-protocol.md  0015-no-device-hotplug.md  0016-modular-visual-styling.md  0017-focus-and-overlay-stack.md  0018-selectable-menu-component.md  0019-preferences-and-config-migrations.md  0020-action-registry-and-keybindings.md  0021-history-storage-and-retention.md  0022-render-guarantees-and-layout-contract.md  README.md
dev/archive/: 2026-01-29-claude-audit.md  2026-01-29-claude-review.md  2026-01-29-claudeaudit-completed.md  2026-01-29-docs-governance.md  2026-01-31-claude-review-1.0.27.md  2026-01-31-modularization-plan.md  2026-01-31-visual-md-complete.md  README.md  (+2 more)
docs/: BACKLOG.md  CHANGELOG.md  CLI_FLAGS.md  DEVELOPER_GUIDE.md  HOW_TO_TEST_AUDIO.md  INSTALL.md  TROUBLESHOOTING.md  USAGE.md
guides/: CLI_FLAGS.md  INSTALL.md  TROUBLESHOOTING.md  TROUBLESHOOTING_BACKEND.md  TROUBLESHOOTING_INSTALL.md  TROUBLESHOOTING_TERMINAL.md  USAGE.md  WHISPER.md
pypi/: pyproject.toml
pypi/src/voiceterm/: __init__.py
rust_tui/: CHANGELOG.md  Cargo.toml  DEBUG_INSTRUCTIONS.md  README.md  debug_slice.sh  final_test.sh  run_test.sh  simple_test.sh  test_fix.sh  test_minimal.sh  test_panic_handling.sh  test_panic_reproducer.rs  test_performance.sh  test_quick.sh  test_utf8.sh  test_utf8_safety  test_utf8_safety.rs  test_voice.sh  test_voice_crash.sh
rust_tui/docs/: PTY_FIX_PLAN.md  code_audit_report.md
rust_tui/scripts/: final_test.sh  run_test.sh  simple_test.sh  test_performance.sh  test_quick.sh  test_voice.sh
rust_tui/src/: app.rs  audio.rs  codex.rs  config.rs  doctor.rs  ipc.rs  lib.rs  main.rs  pty_session.rs  stt.rs  ui.rs  utf8_safe.rs  vad_earshot.rs  voice.rs
rust_tui/src/app/: logging.rs  mod.rs  tests.rs
rust_tui/src/audio/: vad.rs
rust_tui/src/config/: defaults.rs  mod.rs  tests.rs
rust_tui/src/pty_session/: io.rs
rust_tui/tests/: codex_overlay_cli.rs  main_bin.rs
rust_tui/tst/: test_audio.rs
scripts/: README.md  check_mutation_score.py  install.sh  launch_tui.py  release.sh  run_in_pty.py  run_tui.sh  setup.sh  start.bat  start.sh  update-homebrew.sh  voxterm.py
src/: Cargo.toml
(+122 files in other folders)
