[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "voiceterm"
version = "1.0.66"
description = "Voice-first terminal HUD for Codex and Claude with local Whisper STT"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Justin Guida" }]
keywords = ["voice", "terminal", "codex", "claude", "whisper", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/jguida941/voiceterm"
Repository = "https://github.com/jguida941/voiceterm"
Documentation = "https://github.com/jguida941/voiceterm/blob/master/README.md"
Issues = "https://github.com/jguida941/voiceterm/issues"

[project.scripts]
voiceterm = "voiceterm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceterm"]
