[package]
name = "rust_tui"
version = "0.1.0"
edition = "2021"
default-run = "rust_tui"

[features]
default = ["high-quality-audio"]
high-quality-audio = ["rubato"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
unicode-width = "0.1"
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
cpal = { version = "0.16" }
whisper-rs = { version = "0.15.1", default-features = false, features = [] }
whisper-rs-sys = "0.14"
num_cpus = "1.17"
gag = "1.0"
rubato = { version = "0.12", optional = true }

[[bin]]
name = "test_audio"
path = "tst/test_audio.rs"
