[package]
name = "rust_tui"
version = "1.0.22"
edition = "2021"
default-run = "codex-voice"
autobins = false

[features]
default = ["high-quality-audio", "vad_earshot"]
high-quality-audio = ["rubato"]
vad_earshot = ["earshot"]
mutants = []

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
unicode-width = "0.1"
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
vte = "0.14"
cpal = { version = "0.16" }
whisper-rs = { version = "0.14.1", default-features = false, features = [] }
regex = "1"
num_cpus = "1.17"
gag = "1.0"
rubato = { version = "0.12", optional = true }
earshot = { version = "0.1", optional = true }

[[bin]]
name = "codex-voice"
path = "src/bin/codex_overlay.rs"

[[bin]]
name = "rust_tui"
path = "src/main.rs"

[[bin]]
name = "voice_benchmark"
path = "src/bin/voice_benchmark.rs"

[[bin]]
name = "latency_measurement"
path = "src/bin/latency_measurement.rs"

[[bin]]
name = "test_crash"
path = "src/bin/test_crash.rs"

[[bin]]
name = "test_utf8_bug"
path = "src/bin/test_utf8_bug.rs"
